fix: hide overflow in reference field

--- a/app/components/FieldReference/FieldReference.css
+++ b/app/components/FieldReference/FieldReference.css
@@ -2,16 +2,25 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--theme-colour-background-shade-1, #FAFAFA);
-  border: 1px solid var(--theme-colour-background-shade-4, #E4E4E4);
+  background-color: var(--theme-colour-background-shade-1, #fafafa);
+  border: 1px solid var(--theme-colour-background-shade-4, #e4e4e4);
   border-radius: 5px;
   padding: 5px;
   padding-left: 10px;
   margin: 3px 0;
 }
 
+.list-value-container {
+  display: flex;
+}
+
 .values {
-  width: 100%;
+  flex-basis: auto;
+  min-width: 0; /* https://css-tricks.com/flexbox-truncated-text/ */
+}
+
+.buttons {
+  display: flex;
 }
 
 .value {
@@ -21,18 +30,25 @@
   padding-top: 2px;
 }
 
+.value,
+.list-value {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .empty {
-  color: var(--theme-colour-background-shade-2, #AAAAAA);
+  color: var(--theme-colour-background-shade-2, #aaaaaa);
 }
 
 .value-link {
-  display: inline-block;
-  border-bottom: 1px solid var(--theme-colour-background-shade-4, #E4E4E4);
+  display: block;
+  border-bottom: 1px solid var(--theme-colour-background-shade-4, #e4e4e4);
   margin-top: 5px;
+  margin-right: 23px;
   position: relative;
-  clear: both;
-  float: left;
 }
+
 .value-link:first-of-type {
   margin-top: 0;
 }
@@ -53,7 +69,7 @@
 }
 
 .value-link:hover {
-  border-bottom-color: var(--theme-colour-data, #4A91FF)
+  border-bottom-color: var(--theme-colour-data, #4a91ff);
 }
 
 .placeholder {
@@ -70,7 +86,7 @@
 }
 
 .list-head-annotation {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   color: #000000;
   font-size: 10px;
   font-family: var(--theme-font-family, sans-serif);
